# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./user_state";
 export * from "./app_user";
+export * from "./public_trade";
